rename package to match project name, add first resultset mapping test

--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,30 @@
   <name>Flat Map</name>
   <url>http://github.com/arnaudroger/flat-map</url>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+   </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	    <groupId>org.hsqldb</groupId>
+	    <artifactId>hsqldb</artifactId>
+	    <version>2.3.2</version>
+	      <scope>test</scope>
+	</dependency>    
   </dependencies>
 </project>
