--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 	    <artifactId>hsqldb</artifactId>
 	    <version>2.3.2</version>
 	      <scope>test</scope>
-	</dependency>    
+	</dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-all</artifactId>
+		<version>1.9.5</version>
+	    <scope>test</scope>
+    </dependency>
+	    
   </dependencies>
 </project>
