--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,11 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.7</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
