--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,11 @@
 			<version>3.2.7</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.6.Final</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
