--- a/pom.xml
+++ b/pom.xml
@@ -59,5 +59,11 @@
 			<version>4.3.6.Final</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>4.3.6.Final</version>
+			<scope>test</scope>
+		</dependency>		
 	</dependencies>
 </project>
