--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+			    <groupId>org.eluder.coveralls</groupId>
+			    <artifactId>coveralls-maven-plugin</artifactId>
+			    <version>2.2.0</version>
+			</plugin>			
 		</plugins>
 	</build>
 	<dependencies>
