--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 	      <build>
 	        <plugins>
 	          <plugin>
+	            <groupId>org.jacoco</groupId>
+	            <artifactId>jacoco-maven-plugin</artifactId>
+	            <version>0.7.1.201405082137</version>
+	          </plugin>	        
+	          <plugin>
 	            <groupId>org.eluder.coveralls</groupId>
 	            <artifactId>coveralls-maven-plugin</artifactId>
 	            <version>2.2.0</version>
