--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,26 @@
 	<name>SimpleFlatMapper</name>
 	<url>http://github.com/arnaudroger/SimpleFlatMapper</url>
 
+	<developers>
+		<developer>
+			<name>Arnaud Roger</name>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>The MIT License (MIT)</name>
+			<url>http://opensource.org/licenses/MIT</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</connection>
+		<developerConnection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</developerConnection>
+		<url>https://github.com/arnaudroger/SimpleFlatMapper</url>
+	</scm>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -77,32 +97,32 @@
 			<artifactId>HdrHistogram</artifactId>
 			<version>1.2.1</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
 	</dependencies>
-	
-	 <profiles>
-	    <profile>
-	      <id>travis</id>
-	      <activation>
-	        <property>
-	          <name>env.TRAVIS</name>
-	          <value>true</value>
-	        </property>
-	      </activation>
-	      <build>
-	        <plugins>
-	          <plugin>
-	            <groupId>org.jacoco</groupId>
-	            <artifactId>jacoco-maven-plugin</artifactId>
-	            <version>0.7.1.201405082137</version>
-	          </plugin>	        
-	          <plugin>
-	            <groupId>org.eluder.coveralls</groupId>
-	            <artifactId>coveralls-maven-plugin</artifactId>
-	            <version>2.2.0</version>
-	          </plugin>
-	        </plugins>
-	      </build>
-	    </profile>
-	  </profiles>	
+
+	<profiles>
+		<profile>
+			<id>travis</id>
+			<activation>
+				<property>
+					<name>env.TRAVIS</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.7.1.201405082137</version>
+					</plugin>
+					<plugin>
+						<groupId>org.eluder.coveralls</groupId>
+						<artifactId>coveralls-maven-plugin</artifactId>
+						<version>2.2.0</version>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
