--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
 		<developerConnection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</developerConnection>
 		<url>https://github.com/arnaudroger/SimpleFlatMapper</url>
 	</scm>
+	
+	<properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  	</properties>
 
 	<build>
 		<plugins>
