--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<developers>
 		<developer>
 			<name>Arnaud Roger</name>
+			<email>arnaud.roger@gmail.com</email>
 		</developer>
 	</developers>
 
