--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<scm>
 		<url>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</url>
 		<connection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</connection>
-		<developerConnection>scm:git:git://github.com/arnaudroger/SimpleFlatMapper.git</developerConnection>
+		<developerConnection>scm:git:git://github.com:arnaudroger/SimpleFlatMapper.git</developerConnection>
 	</scm>
 
 	<properties>
