--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 
 jdk:
   - oraclejdk7
+  - oraclejdk8
+  - openjdk7
+  - openjdk8
 
 after_success:
   - mvn -P travis jacoco:report coveralls:jacoco
