--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.github.arnaudroger</groupId>
 	<artifactId>simpleFlatMapper</artifactId>
 	<version>0.4-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<name>SimpleFlatMapper</name>
 	<url>http://github.com/arnaudroger/SimpleFlatMapper</url>
@@ -48,6 +48,18 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				 <version>2.5.0</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Export-Package>org.sfm.map,org.sfm.jdbc</Export-Package>
+						<Import-Package>*;resolution:=optional</Import-Package>
+					</instructions>
+				</configuration>
+			</plugin>			
 		</plugins>
 	</build>
 	<dependencies>
@@ -111,6 +123,12 @@
         <version>1.5.1</version>
 			<scope>test</scope>
     </dependency>		
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-jdbc</artifactId>
+	<version>4.0.6.RELEASE</version>
+	<scope>compile</scope>
+</dependency>    
 	</dependencies>
 
 	<profiles>
