--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 
 	<groupId>com.github.arnaudroger</groupId>
 	<artifactId>simpleFlatMapper</artifactId>
-	<version>0.5-SNAPSHOT</version>
-	<packaging>bundle</packaging>
+	<version>0.4-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<name>SimpleFlatMapper</name>
 	<url>http://github.com/arnaudroger/SimpleFlatMapper</url>
@@ -70,6 +70,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.0.6.RELEASE</version>
+			<scope>compile</scope>
+		</dependency>    
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
@@ -117,18 +123,12 @@
 			<version>1.2.1</version>
 			<scope>test</scope>
 		</dependency>
-    <dependency>
-        <groupId>org.sql2o</groupId>
-        <artifactId>sql2o</artifactId>
-        <version>1.5.1</version>
+		<dependency>
+			<groupId>org.sql2o</groupId>
+			<artifactId>sql2o</artifactId>
+			<version>1.5.1</version>
 			<scope>test</scope>
-    </dependency>		
-<dependency>
-	<groupId>org.springframework</groupId>
-	<artifactId>spring-jdbc</artifactId>
-	<version>4.0.6.RELEASE</version>
-	<scope>compile</scope>
-</dependency>    
+		</dependency>		
 	</dependencies>
 
 	<profiles>
