[maven-release-plugin] prepare release simpleFlatMapper-0.8

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.arnaudroger</groupId>
 	<artifactId>simpleFlatMapper</artifactId>
-	<version>0.8-SNAPSHOT</version>
+	<version>0.8</version>
 	<packaging>bundle</packaging>
 
 	<name>SimpleFlatMapper</name>
