--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
   - oraclejdk8
   - oraclejdk7
   - openjdk7
-  - oraclejdk6
+  - openjdk6
 
 after_success:
   - mvn -P travis jacoco:report coveralls:jacoco
