--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.arnaudroger</groupId>
 	<artifactId>simpleFlatMapper</artifactId>
-	<version>0.9.11</version>
+	<version>0.9.12-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<name>SimpleFlatMapper</name>
