--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
 			<artifactId>querydsl-sql</artifactId>
 			<version>2.7.0</version>
 			<scope>provided</scope>
+		</dependency>
+	    <dependency>
+		  <groupId>org.jooq</groupId>
+		  <artifactId>jooq</artifactId>
+		  <version>3.4.2</version>
+			<scope>provided</scope>
 		</dependency>		
 		<dependency>
 			<groupId>junit</groupId>
