--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.arnaudroger</groupId>
@@ -44,20 +45,20 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				 <version>2.5.0</version>
+				<version>2.5.0</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
 						<Export-Package>org.sfm.map,org.sfm.jdbc,org.sfm.osgi,org.sfm.utils</Export-Package>
 						<Import-Package>*;resolution:=optional</Import-Package>
- 						<Bundle-Activator>org.sfm.osgi.SfmBundleActivator</Bundle-Activator>						
+						<Bundle-Activator>org.sfm.osgi.SfmBundleActivator</Bundle-Activator>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -77,6 +78,13 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>javax.persistence</artifactId>
+			<version>2.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 			<version>5.0.0</version>
@@ -88,12 +96,12 @@
 			<version>2.7.0</version>
 			<scope>provided</scope>
 		</dependency>
-	    <dependency>
-		  <groupId>org.jooq</groupId>
-		  <artifactId>jooq</artifactId>
-		  <version>3.4.2</version>
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq</artifactId>
+			<version>3.4.2</version>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -106,7 +114,7 @@
 			<version>2.3.2</version>
 			<scope>test</scope>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
@@ -156,82 +164,165 @@
 			</build>
 		</profile>
 
-	<profile>
-		<id>release-sign-artifacts</id>
-		<activation>
-			<property>
-				<name>performRelease</name>
-				<value>true</value>
-			</property>
-		</activation>
-		<build>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.4</version>
-					<configuration>
-						<passphrase>${gpg.passphrase}</passphrase>
-					</configuration>
-					<executions>
-						<execution>
-							<id>sign-artifacts</id>
-							<phase>verify</phase>
-							<goals>
-								<goal>sign</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-			    <plugin>
-			      <groupId>org.apache.maven.plugins</groupId>
-			      <artifactId>maven-source-plugin</artifactId>
-			      <version>2.2.1</version>
-			      <executions>
-			        <execution>
-			          <id>attach-sources</id>
-			          <goals>
-			            <goal>jar-no-fork</goal>
-			          </goals>
-			        </execution>
-			      </executions>
-			    </plugin>
-			    <plugin>
-			      <groupId>org.apache.maven.plugins</groupId>
-			      <artifactId>maven-javadoc-plugin</artifactId>
-			      <version>2.9.1</version>
-			      <executions>
-			        <execution>
-			          <id>attach-javadocs</id>
-			          <goals>
-			            <goal>jar</goal>
-			          </goals>
-			        </execution>
-			      </executions>
-			    </plugin>	
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
-				<configuration>
-				 	<goals>deploy nexus-staging:release</goals>
-					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.2</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>sonatype-nexus-staging</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
-			</plugin>				  			
-			</plugins>
-		</build>
-	</profile>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.4</version>
+						<configuration>
+							<passphrase>${gpg.passphrase}</passphrase>
+						</configuration>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.9.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>2.4.2</version>
+						<configuration>
+							<goals>deploy nexus-staging:release</goals>
+							<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.2</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>sonatype-nexus-staging</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>jdk16</id>
+			<activation>
+				<jdk>1.6</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-jar-plugin</artifactId>
+						<configuration>
+							<classifier>jdk16</classifier>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>com.google.code.maven-replacer-plugin</groupId>
+						<artifactId>replacer</artifactId>
+						<version>1.5.3</version>
+						          <executions>                
+			                <execution>
+			                    <phase>process-sources</phase>
+			                    <goals>
+			                        <goal>replace</goal>
+			                    </goals>
+			                </execution>
+			            </executions>
+						<configuration>
+							<file>src/main/java/org/sfm/jdbc/JdbcMapper.java</file>
+							<file>src/main/java/org/sfm/jdbc/impl/JdbcMapperImpl.java</file>
+							<file>src/main/java/org/sfm/jdbc/impl/AbstractJdbcMapperImpl.java</file>
+							<replacements>
+								<replacement>
+									<token>//IFJAVA8_START</token>
+									<value>/*IFJAVA8_START </value>
+								</replacement>
+								<replacement>
+									<token>//IFJAVA8_END</token>
+									<value>IFJAVA8_END*/</value>
+								</replacement>
+							</replacements>
+						</configuration>
+					</plugin>
+										<plugin>
+						<groupId>com.google.code.maven-replacer-plugin</groupId>
+						<artifactId>replacer</artifactId>
+						<version>1.5.3</version>
+						          <executions>                
+			                <execution>
+			                    <phase>process-classes</phase>
+			                    <goals>
+			                        <goal>replace</goal>
+			                    </goals>
+			                </execution>
+			            </executions>
+						<configuration>
+							<file>src/main/java/org/sfm/jdbc/JdbcMapper.java</file>
+							<file>src/main/java/org/sfm/jdbc/impl/JdbcMapperImpl.java</file>
+							<file>src/main/java/org/sfm/jdbc/impl/AbstractJdbcMapperImpl.java</file>
+							<replacements>
+								<replacement>
+									<token>/*IFJAVA8_START</token>
+									<value>//IFJAVA8_START </value>
+								</replacement>
+								<replacement>
+									<token>IFJAVA8_END*/</token>
+									<value>//IFJAVA8_END*/</value>
+								</replacement>
+							</replacements>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.1</version>
+						<configuration>
+							<source>1.6</source>
+							<target>1.6</target>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 	</profiles>
 
 	<distributionManagement>
