--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
 					<name>env.TRAVIS</name>
 					<value>true</value>
 				</property>
+				<jdk>1.8</jdk>
 			</activation>
 			<build>
 				<plugins>
