--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<source.classifier>source</source.classifier>
+		<javadoc.classifier>javadoc</javadoc.classifier>
 	</properties>
 
 	<build>
@@ -195,6 +197,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
 						<version>2.2.1</version>
+						<configuration>
+							<classifier>${source.classifier}</classifier>
+						</configuration>
 						<executions>
 							<execution>
 								<id>attach-sources</id>
@@ -208,6 +213,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>2.9.1</version>
+						<configuration>
+							<classifier>${javadoc.classifier}</classifier>
+						</configuration>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -246,6 +254,11 @@
 			<activation>
 				<jdk>1.6</jdk>
 			</activation>
+			<properties>
+				<source.classifier>jdk16-source</source.classifier>
+				<javadoc.classifier>jdk16-javadoc</javadoc.classifier>
+			</properties>
+
 			<build>
 				<plugins>
 					<plugin>
@@ -315,6 +328,11 @@
 			<activation>
 				<jdk>1.7</jdk>
 			</activation>
+			<properties>
+				<source.classifier>jdk17-source</source.classifier>
+				<javadoc.classifier>jdk17-javadoc</javadoc.classifier>
+			</properties>
+
 			<build>
 				<plugins>
 					<plugin>
