--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,14 @@
 			<version>3.4.2</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.7</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
