--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.simpleflatmapper</groupId>
 	<artifactId>simpleFlatMapper</artifactId>
-	<version>1.5.1-SNAPSHOT</version>
+	<version>1.5.1</version>
 	<packaging>bundle</packaging>
 
 	<name>SimpleFlatMapper</name>
